# OpenGL-Exercises

./: .gitignore  CMakeLists.txt  GY80SensorDataSource.hxx  README.md  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  camCapture.fs  capture_cam_render.cpp  coloredCubeObject.fs  coordinateSystem.fs  cube_lighting.cpp  cube_lighting_map.cpp  cube_lighting_with_material.cpp  hello_square.cpp  hello_triangle.cpp  hello_window.cpp  light_casting.cpp  light_casting_with_imgui.cpp  mesh.h  model.h  model_loading_lib.cpp  mvp_cube.cpp  mvp_with_camera.cpp  mvp_with_mouse_kb.cpp  opengl_camera_position.cxx  opengl_coordinates.cpp  opengl_perspective_rendering.cpp  opengl_scene.cpp  rotating_square.cpp  sample_program.cpp  sample_triangle.cpp  shader.cpp  shader.hpp  squares_with_transform.cpp
commonlib/: CMakeLists.txt
commonlib/include/: Camera.h  IndexBuffer.h  Light.h  Renderer.h  Texture.h  VertexArray.h  VertexBuffer.h  mesh.h  model.h  shader.h
commonlib/src/: IndexBuffer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  shader.cpp
shader_collection/: cameraPos.fs  cameraPos.vs  coloredCubeObject.vs  coordinateSystem.fs  coordinateSystem.vs  dynamicShader.fs  dynamicShader.vs  light_casting_cube.vs  light_casting_direction_light.fs  light_casting_lightsource.fs  light_casting_lightsource.vs  light_casting_multiple_lights.fs  light_casting_room.vs  light_casting_spot_light.fs
